Refine outline structure

--- a/thesis/outline.tex
+++ b/thesis/outline.tex
@@ -28,15 +28,13 @@
 
 \section{Background}
 
-\subsection{ARM Architecture Reference Manual}
+\subsection{RISC-V}
 
-\subsection{Architecture Specification Language}
+\subsection{µZ \& Datalog}
 
-\subsection{Property Specification Language}
+\subsection{SPACER}
 
-\section{Towards a Labeled State Transition System}
-
-\section{Goals of the Thesis}
+\section{Project Plan}
 
 \bibliography{references}
 \bibliographystyle{alpha}
