--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -15,3 +15,20 @@
     address = {New York, NY, USA},
     keywords = {hardware security, information flow, trustzone},
 }
+
+@article{Komuravelli13,
+  author = {Komuravelli, Anvesh and
+               Gurfinkel, Arie and
+               Chaki, Sagar and
+               Clarke, Edmund M.},
+  title = {Automatic Abstraction in SMT-Based Unbounded Software Model Checking},
+  journal = {CoRR},
+  volume = {abs/1306.1945},
+  year = {2013},
+  url = {http://arxiv.org/abs/1306.1945},
+  archivePrefix = {arXiv},
+  eprint = {1306.1945},
+  timestamp = {Mon, 13 Aug 2018 16:47:54 +0200},
+  biburl = {https://dblp.org/rec/bib/journals/corr/KomuravelliGCC13},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
