Added textgreek package

--- a/thesis/outline.tex
+++ b/thesis/outline.tex
@@ -6,6 +6,7 @@
 \usepackage{tikz}
 \usepackage[hidelinks]{hyperref}
 \usepackage{syntax}
+\usepackage[euler]{textgreek}
 \usetikzlibrary{positioning,calc,graphs}
 
 \setlength{\grammarindent}{8em}
@@ -13,6 +14,8 @@
 % fonts
 \usepackage{tgpagella}
 \usepackage{courier}
+
+\newcommand{\muZ}{{\textmu}Z}
 
 \title{Master-thesis Secure-M \\ \large{An outline}}
 \author{Felix Linker}
