--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -32,3 +32,26 @@
   biburl = {https://dblp.org/rec/bib/journals/corr/KomuravelliGCC13},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@manual{RiscVISA,
+    title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA, Version 2.2},
+    author = {Waterman Andrew and Asanovi\'c},
+    organization = {RISC-V Foundation},
+    month = {May},
+    year = {2017}
+}
+
+@manual{RiscVISAP,
+    title = {The RISC-V Instruction Set Manual, Volume II: Privileged Architecture, Version 1.10},
+    author = {Waterman Andrew and Asanovi\'c},
+    organization = {RISC-V Foundation},
+    month = {May},
+    year = {2017}
+}
+
+@inproceedings{Hoder11,
+    title={$ \mu ${Z} - An Efficient Engine for Fixed Points with Constraints},
+    author={Krystof Hoder and Nikolaj Bj{\o}rner and Leonardo Mendonça de Moura},
+    booktitle={CAV},
+    year={2011}
+}
