Added explanation to project-step iteration and refinement

--- a/thesis/outline.tex
+++ b/thesis/outline.tex
@@ -119,6 +119,12 @@ The project divides itself into the following steps:
         \item Verification can be done straight-forward but it might be advisable to use algorithms like SPACER to enhance performance and output
     \end{itemize}
     \item Iteration \& refinement
+    \begin{itemize}
+        \item What kind of bad programming patterns can be distinguished?
+        \item What kind of rules can prohibit such bad patterns?
+        \item Can positive effects of these rules be proven?
+        \item Does the formal model need to be refined?
+    \end{itemize}
     \item Evaluation
 \end{enumerate}
 
