Fix RISC-V ISA references entries

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -34,16 +34,18 @@
 }
 
 @manual{RiscVISA,
-    title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA, Version 2.2},
-    author = {Waterman Andrew and Asanovi\'c},
+    title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA},
+    note = {Version 2.2},
+    author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
     month = {May},
     year = {2017}
 }
 
 @manual{RiscVISAP,
-    title = {The RISC-V Instruction Set Manual, Volume II: Privileged Architecture, Version 1.10},
-    author = {Waterman Andrew and Asanovi\'c},
+    title = {The RISC-V Instruction Set Manual, Volume II: Privileged Architecture},
+    note = {Version 1.10},
+    author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
     month = {May},
     year = {2017}
