Add introduction to risc-v to thesis

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -57,3 +57,23 @@
     booktitle={CAV},
     year={2011}
 }
+
+@techreport{RiscVISA-org,
+    author={Andrew Waterman and Yunsup Lee and David A. Patterson and Krste Asanovic},
+    title={The {RISC-V} Instruction Set Manual, {V}olume {I}: Base User-Level {ISA}},
+    institution={EECS Department, University of California at Berkeley},
+    number={UCB/EECS-2011-62},
+    month={May},
+    year={2011}
+}
+
+@article{Qian16,
+    author = {Ge, Qian and Yarom, Yuval and Cock, David and Heiser, Gernot},
+    year = {2016},
+    month = {10},
+    pages = {1-27},
+    title = {A survey of microarchitectural timing attacks and countermeasures on contemporary hardware},
+    volume = {8},
+    journal = {Journal of Cryptographic Engineering},
+    doi = {10.1007/s13389-016-0141-6}
+}
