--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -26,6 +26,75 @@
 \makenoidxglossaries
 \setacronymstyle{long-short}
 
+\newglossaryentry{riscv}
+{
+    name={RISC-V},
+    % TODO: description
+    description={}
+}
+
+% TODO: descriptions
+\newacronym{risc}{RISC}{reduced instruction set computer}
+\newacronym{isa}{ISA}{instruction set architecture}
+\newacronym[
+    description={\gls{riscv} hardware thread}
+]{hart}{hart}{RISC-V hardware thread}
+\newacronym{pc}{PC}{program counter register}
+\newacronym{lr}{LR}{link register}
+\newacronym{sp}{SP}{stack pointer register}
+\newacronym{csr}{CSR}{control and status register}
+\newacronym{abi}{ABI}{application binary interface}
+\newacronym{aee}{AEE}{application execution environment}
+\newacronym{os}{OS}{operating system}
+\newacronym{sbi}{SBI}{supervisor binary interface}
+\newacronym{see}{SEE}{supervisor execution environment}
+\newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
+\newacronym{nmi}{NMI}{non-maskable interrupt}
+
+\newacronym{jal}{JAL}{jump and link}
+\newacronym{jalr}{JALR}{jump and link register}
+\newacronym{ecall}{ECALL}{environment call}
+\newacronym{ebreak}{EBREAK}{environment breakpoint}
+\newacronym{mret}{MRET}{machine trap return}
+\newacronym{uret}{URET}{user trap return}
+
+% static information csrs
+\newacronym{misa}{misa}{machine ISA register}
+\newacronym{mvendorid}{mvendorid}{machine vendor ID register}
+\newacronym{marchid}{marchid}{machine architecture ID register}
+\newacronym{mimpid}{mimpid}{machine implementation ID register}
+\newacronym{mhartid}{mhartid}{hart ID register}
+
+% timer and performance counting csrs
+\newacronym{mtime}{mtime}{machine time register}
+\newacronym{mtimecmp}{mtimecmp}{machine time compare register}
+\newacronym{mcycle}{mcycle}{machine cycle counter register}
+\newacronym{minstret}{minstret}{machine retired instructions counter register}
+\newacronym{mhpmcountern}{mhpmcounter$n$}{machine event counter register}
+\newacronym{mhpmeventn}{mhpmevent$n$}{machine event selector register}
+\newacronym{mcounteren}{mcounteren}{machine counter-enable register}
+
+% trap handling csrs
+\newacronym{mstatus}{mstatus}{machine status register}
+\newacronym{mtvec}{mtvec}{machine trap-vector base-address register}
+\newacronym{mip}{mip}{machine interrupt pending register}
+\newacronym{mie}{mie}{machine interrupt enable register}
+\newacronym{mscratch}{mscratch}{machine scratch register}
+\newacronym{mepc}{mepc}{machine exception program counter}
+\newacronym{mcause}{mcause}{machine cause register}
+\newacronym{mtval}{mtval}{machine trap value}
+\newacronym{medeleg}{medeleg}{machine exception delegation register}
+\newacronym{mideleg}{mideleg}{machine interrupts delegation register}
+
+\newacronym{ustatus}{ustatus}{user status register}
+\newacronym{uip}{uip}{user interrupt pending register}
+\newacronym{uie}{uie}{user interrupt enable register}
+\newacronym{utvec}{utvec}{user trap-vector base-address register}
+\newacronym{uscratch}{uscratch}{user scratch register}
+\newacronym{uepc}{uepc}{user exception program counter}
+\newacronym{ucause}{ucause}{user cause register}
+\newacronym{utval}{utval}{user trap value}
+
 \title{Securing an Architecture \\ \large{Applying Information Flow Control Policie to an Architectural Specification}}
 \author{Felix Linker}
 \date{}
@@ -42,6 +111,7 @@
 
 \input{sections/introduction.tex}
 \input{sections/background.tex}
+\input{sections/risc-v.tex}
 \input{sections/model.tex}
 \input{sections/checking.tex}
 
